syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "users/pkg/user/v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Note API"
    version: "1.0.0"
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  }
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/api/v1/user/{id}"
    };
  }
  rpc GetByUserName(GetByUserNameRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/api/v1/user/{username}/byname"
    };
  }
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/api/v1/user"
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/api/v1/user/{id}"
    };
  }
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  role role = 5;
}

enum role {
  user = 0;
  admin = 1;
}

message CreateResponse {
  int64  id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetByUserNameRequest {
  string username = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.Int32Value role = 4;
}

message DeleteRequest {
  int64 id = 1;
}